# mlx2coreml

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: mil_ops.md  mlx_ops.md  ops_status.md
mlx2coreml/: __init__.py  compilation.py  compute_plan.py  conversion.py  from_mlx.py  ir.py  lower_to_mil.py  op_registry.py  passes.py  reporting.py
mlx2coreml/convert_mlx_audio/: __init__.py
mlx2coreml/convert_mlx_lm/: __init__.py
scripts/: analyze_ane_placement.py  benchmark_compute_units.py  capture_mlx_graph.py  convert_and_sample_qwen3_0_6b.py  convert_mlx_lm_to_coreml.py  convert_mlx_to_coreml.py  eval_weighted_coreml_parity.py  generate_ops_status_doc.py  print_mil_ops.py  print_mlx_ops.py  run_model_zoo.py  smoke_mlx_to_coreml.py
tests/: model_zoo.py  test_analyze_ane_placement_helpers.py  test_benchmark_compute_units_helpers.py  test_callback_capture_parser.py  test_capture_mlx_function.py  test_compilation_api.py  test_compute_plan_helpers.py  test_conversion_api.py  test_convert_mlx_audio.py  test_convert_mlx_to_coreml_script.py  test_dot_parser_fixtures.py  test_end_to_end_live_capture_subset.py  test_end_to_end_model_zoo.py  test_end_to_end_model_zoo_transformer_live.py  test_end_to_end_rope_parity.py  test_end_to_end_smoke.py  test_end_to_end_transformer_block_parity.py  test_flex_input_shapes.py  test_flexible_conversion_paths.py  test_ir_state_spec.py  test_lower_to_mil_convert_inputs.py  test_lower_to_mil_state_specs.py  test_lowering_arithmetic_aliases_and_reductions.py  test_lowering_arithmetic_aliases_extended.py  test_lowering_arithmetic_aliases_stats.py  test_lowering_linear_broadcast_composite_helpers.py  test_lowering_linear_broadcast_composite_helpers_conv.py  test_lowering_matmul_linearization.py  test_lowering_norms_and_special_unary_ops.py  test_lowering_shape_index_transforms.py  test_lowering_smoke.py  test_lowering_stateful_primitives.py  test_lowering_tensor_creation_and_fast_helpers.py  test_lowering_tensor_creation_helpers.py  test_multifunction_packaging_helpers.py  test_pipeline_and_diagnostics.py  test_reporting_stage_timings.py
tests/fixtures/dot/: linear_smoke.dot  no_sink.dot  out_of_order.dot
