[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx2coreml"
version = "0.1.0"
description = "Experimental MLX to Core ML translation pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Lucas Newman", email = "lucasnewman@me.com" },
]
keywords = [
    "artificial intelligence",
    "coreml",
    "machine learning",
    "mlx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "coremltools",
    "mlx",
    "mlx-lm",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/lucasnewman/mlx2coreml"
Repository = "https://github.com/lucasnewman/mlx2coreml"

[project.scripts]
mlx2coreml-convert-mlx-lm = "mlx2coreml.convert_mlx_lm:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mlx2coreml*"]
